--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -30,7 +30,7 @@ jobs:
         terraform_version: 1.0.0
 
     - name: Terraform Init
-      run: terraform init
+      run: terraform init -reconfigure
 
     - name: Terraform Format
       run: terraform fmt
